Fix: Ensure content does not bleed off page when utility nav expanded

--- a/app/assets/stylesheets/layout/_document_page.scss
+++ b/app/assets/stylesheets/layout/_document_page.scss
@@ -41,6 +41,10 @@
     z-index: 1;
 
     .content-col {
+      @media only screen and (max-width: $small-viewport-width) {
+        overflow: hidden;
+      }
+
       > .fr-box {
         min-height: 650px;
 
